2010-08-10  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* mingw: Use sysroot, if present, for mingw_dir.

2010-07-21  Corinna Vinschen  <corinna@vinschen.de>

	* dump_setup.cc (tfx_chars): New WCHAR array, copied from Cygwin.
	(transform_chars): New function, copied from Cygwin.
	(simple_nt_stat): New function to check file existance using native
	NT function.  Explain why.
	(directory_exists): Call simple_nt_stat.
	(file_exists): Ditto.

2010-07-05  Christopher Faylor  <me+cygwin@cgf.cx>

	* ldd.cc: Clean up formatting throughout.
	(head): Move earlier.
	(saw_file): Ditto.
	(print_dlls): Reset head here.  Record seen dll names so they will
	not potentially be printed later.
	(process_file): Remove clearing of head here.

2010-07-05  Corinna Vinschen  <corinna@vinschen.de>

	* dump_setup.cc (dump_file): Read requested content from setup.rc
	file created by newer setup.exe.

2010-06-29  Corinna Vinschen  <corinna@vinschen.de>

	* utils.sgml (locale): Change stray local cygdrive prefix to Cygwin's
	default.

2010-04-29  Corinna Vinschen  <corinna@vinschen.de>

	* utils.sgml (mount): Add description for "dos" and "ihash" mount
	options.

2010-04-29  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc: Include sys/cygwin.h if built for mount(1).
	(struct opt): Add "dos" and "ihash" options.
	(from_fstab_line): Call cygwin_internal rather than read_flags if
	built for mount(1).

2010-04-29  Corinna Vinschen  <corinna@vinschen.de>

	* mount.cc (oopts): Remove entirely.
	(usage): Call cygwin_internal (CW_LST_MNT_OPTS) to create list of
	mount options.
	(print_version): Fix copyright date.
	(main): Replace option processing loop with single call to
	cygwin_internal (CW_CVT_MNT_OPTS).

2010-04-28  Corinna Vinschen  <corinna@vinschen.de>

	* locale.cc (print_lc_xxx_charset): Remove.
	(enum type_t): Change according to the fact that nl_langinfo now returns
	all locale category values.
	(lc_ctype_names): Add new category members.  Redefine for exclusive